--- a/_config.yml
+++ b/_config.yml
@@ -20,14 +20,14 @@ repository               : "academicpages/academicpages.github.io"
 #               Additional customization can be done by editing /_includes/author-profile.html
 author:
   # Biographic information
-  avatar           : "profile.png"
-  name             : "Your Sidebar Name"
+  avatar           : "profile.jpeg"
+  name             : "Dart Zheng"
   pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
+  bio              : "Keep optimistic and cheerful, in pursuit of the unknown."
+  location         : "Shanghai"
+  employer         : "SIFEC & Sanda"
   uri              : # URL
-  email            : "none@example.org" 
+  email            : "dart.zheng@gmail.com" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
