--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ author:
   name             : "Dart Zheng"
   pronouns         : # example: "she/her"  
   bio              : "Keep optimistic and cheerful, in pursuit of the unknown."
-  location         : "Shanghai"
-  employer         : "SIFEC & Sanda"
+  location         : "Shanghai,China"
+  employer         : "SIFEC & Sanda U"
   uri              : # URL
   email            : "dart.zheng@gmail.com" 
 
